--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .header {
-    padding-left: 20px;
+    padding-left: 40px;
     padding-top: 1px;
     padding-bottom: 1px;
     text-align: left;
@@ -12,11 +12,13 @@ body {
     font-size: 24px;
     width: 100%;
     border: 0;
+    display: inline-block;
   }
 
 .name {
-  padding-left: 20px;
+  padding-left: 40px;
   font-family: 'Open Sans';
+  display: inline-block;
 }
 
 .profile-pic {
@@ -41,4 +43,78 @@ p {
 
 .bold {
   font-weight: bold;
+}
+
+.right {
+  text-align: right;
+  padding-right: 60px;
+  font-size: 60%;
+}
+
+.dark{
+  background-color: #222;
+  color: #e6e6e6;
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #a84707;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #a84707;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
