--- a/style.css
+++ b/style.css
@@ -46,8 +46,10 @@ p {
 }
 
 .right {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
   text-align: right;
-  padding-right: 60px;
   font-size: 60%;
 }
 
