--- a/style.css
+++ b/style.css
@@ -148,3 +148,36 @@ input:checked + .slider:before {
   background-color: #a84707;
   color: white;
 }
+
+#camerabutton:hover {
+  cursor: pointer;
+  fill: orange;
+  stroke: red;
+  stroke-width: 3px;
+  transition: fill 0.4s;
+}
+
+.camera {
+  display: inline-block;
+  margin-right: auto;
+  width: 25%;
+}
+
+.snap {
+  padding-left: 100px;
+  padding-bottom: -50px;
+}
+
+.flash{ 
+  position:fixed; 
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background-color:#fff;
+}
+
+.photo {
+  max-width: 300px;
+  max-height: 400px;
+}
