align camera to top of page

--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@ input:checked + .slider:before {
 
 .camera {
   display: inline-block;
+  vertical-align: top;
   margin-right: auto;
   width: 25%;
 }
