--- a/clockstyle.css
+++ b/clockstyle.css
@@ -100,6 +100,7 @@ figure {
 	width: 270px;
 	flex: 0 0 auto;
 	font-family: 'Open Sans';
+	touch-action: none;
 	/* position: fixed; */
 	/* top: 170px; */
 }
